[build-system]
requires = ["flit_core>=3.2,<4", "setuptools"]
build-backend = "flit_core.buildapi"

# wheel~=0.40.0

[project]
name = "sonar-space"
readme = "README.md"
authors = [{ name = "Meta AI Research" }]
requires-python = ">=3.8"
dynamic = ["version", "description"]
keywords = [
  "sentence embeddings",
  "sentence representation",
  "sentence encoder",
  "sonar models",
  "speech2speech",
  "text2text",
  "speech2text",
  "text2speech",
  "multi-modal models",
  "multi-language models",
]


# zip_safe = false
classifiers = [
  "Topic :: Scientific/Engineering",
  "Development Status :: 4 - Beta",
]

dependencies = [
  "numpy>=1.21",
  "fairseq2>=0.2.1",
  "torch",
  "torchaudio",
  "sox",
  "soundfile",
  "tqdm",
  "overrides",
  "typing_extensions",
]

[project.optional-dependencies]
dev = [
  # Test
  "pytest>=4.3.0",
  "pytest-asyncio>=0.15.0",
  "pytest-cov>=2.6.1",
  "coverage[toml]>=5.1",
  # Format
  "black==24.3.0",
  "isort>=5.10.1",
  # Linters
  "mypy>=0.782",
  "pylint>=2.8.0",
]

hg = [
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "rouge_score>=0.1.2",
  "nltk>=3.9",
  "absl-py>=2.1.0",
]


[project.urls]
Source = "https://github.com/facebookresearch/SONAR"
Tracker = "https://github.com/facebookresearch/SONAR/issues"

[tool.flit.module]
name = "sonar"

[tool.black]
line-length = 88
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.flake8]
extend_ignore = ["E", "Y"]              # Black
per-file-ignores = ["__init__.py:F401"]

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = []

[tool.mypy]
python_version = "3.8"
show_error_codes = true
check_untyped_defs = true

files = ["sonar/"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/"]
python_files = ["test_*.py"]
